# python-boilerplate

./: .bumpversion.cfg  .coveragerc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  tox.ini
docs/: Makefile
docs/source/: conf.py  installation.rst  modules.rst
docs/source/_templates/: badges.html  github.html
src/python_boilerplate/: __init__.py
tests/: test_python_boilerplate.py
