[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
authors = ["Mateus Mota <mateus@example.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
keywords = ["python-boilerplate"]
repository = "https://github.com/mateuspontesm/python-boilerplate"
packages = [
    { include = "python_boilerplate", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mateuspontesm/python-boilerplate/issues"
"Source" = "https://github.com/mateuspontesm/python-boilerplate"
"Documentation" = "https://python-boilerplate.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pip = "^19.2.3"
wheel = "^0.33.6"
watchdog = "^0.9.0"
flake8 = "^3.7.8"
tox = "^3.14.0"
coverage = "^4.5.4"
pre-commit = "^2.1.0"
isort = {extras = ["pyproject"], version = "^4.3.21"}
yapf = "^0.29.0"
Sphinx = "^1.8.5"
numpydoc = "^0.9.2"
sphinx_rtd_theme = "^0.4.3"

pytest = "^4.6.5"
pytest-runner = "^5.1"
pytest-cov = "^2.8.1"
bump2version = "^1.0.0"

[tool.isort]
known_first_party = 'python_boilerplate'
known_third_party = ["click", "pytest"]
skip= 'docs/source/conf.py'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
